src/test/ui/issues/issue-43925.stderr
error: invalid argument for `cfg(..)`
  --> $DIR/issue-43925.rs:11:24
   |
LL | #[link(name="foo", cfg("rlib"))] //~ ERROR invalid argument for `cfg(..)`
   |                        ^^^^^^

error: aborting due to previous error

